# Data-Structures

./: .replit  LICENSE  README.md  _config.yml  create-task.md  data_structures.md  menu.py  pyproject.toml  tpt.md
_includes/: base.html
github_pages/: ap-prep.md  create-task.md
github_pages/notes/: notes-directory.md
github_pages/notes/tech_talks/: tt0.md  tt1.md
github_pages/notes/tpt/: week0.md
notes/: week0.md  week1.md  week2.md
pages/: ap-prep  ap-prep.md  create-task.md  data_structures.md  directory.md  notes-directory.md  replit.md  tpt.md
pages/notes/: tpt_week2.md  tpt_week3.md  tt1.md  tt2.md  tt3.md  week1.md  week2.md
week0/: animation.py  menu.py  menu2.py  swap.py
week1/: fibonacci.py  list.py  lists.py
week2/: factorial.py  math.py
