[tool.poetry]
name = "repl_python3_Data-Structures-2"
version = "0.1.0"
description = ""
authors = ["PaigeMcCartin <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
recursion-2019 = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
